Fix issue with z-index of page bottom element

--- a/src/sass/_configurator.scss
+++ b/src/sass/_configurator.scss
@@ -185,7 +185,7 @@ html, body {
   --inav-gutter-y: 2rem;
 
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 
@@ -208,6 +208,7 @@ html, body {
   .page-footer {
     display: flex;
     position: sticky;
+    z-index: 1001;
     bottom: 0;
     justify-content: flex-end;
     margin: auto calc(var(--inav-gutter-x) * -0.5) calc(var(--inav-gutter-y) * -0.5);
